docs: fix video width on mobile devices
Previously on mobile devices, the video would cause a large amount of
overflow leading to a horizontally scrollable site

--- a/www/css/github-markdown.css
+++ b/www/css/github-markdown.css
@@ -961,3 +961,7 @@
 .markdown-body .pl-12 {
   padding-left: 128px!important;
 }
+
+.markdown-body iframe {
+  max-width: 100%;
+}
